--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -71,7 +71,7 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.5 also includes the following bug fixes:
 
-=== On iOS Safari, Hangul (Korean) characters will no longer merge onto the previous line after inserting a newline by pressing Enter.
+=== On iOS Safari, Korean characters will no longer merge onto the previous line after inserting a newline by pressing Enter.
 //#TINY-9746
 
 In previous versions of {productname}, in iOS Safari, a bug has been fixed regarding the handling of Korean characters.
