--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -78,7 +78,7 @@ In previous versions of {productname}, in iOS Safari, a bug has been fixed regar
 
 Previously, when a newline was inserted by pressing the Enter key and the user continued typing in Korean without moving the caret, Korean characters typed on the newline would merge onto the previous line and the newline would be removed. This occurred because iOS Safari composed Korean characters by deleting the previous partial character and inserting the composed character, continuing until a native Enter `keypress` event had been fired. However, {productname} has its own Enter key handler on `keydown`, so the native Enter `keypress` event was suppressed, preventing iOS Safari from stopping Korean character composition as needed and causing the bug.
 
-{productname} 6.5, now saves a bookmark while adding an undo level when the caret is positioned after a Korean character and the Enter key is pressed. This allows the native Enter key event to fire and end the composition session. Then, on the keyup event, the effects of the Enter key (creating a newline) are undone, the original selection is restored, and {productname}'s Enter key handler is called. As a result, iOS Safari no longer attempts to compose Korean characters across newlines, resolving the issue.
+In {productname} 6.5,  a bookmark is saved and an undo level is added on the Enter `keydown` event when the user is on iOS Safari and the caret is detected to be positioned after a Korean character. This allows the native Enter `keypress` event to fire and end the composition session. Then, on the Enter `keyup` event, the effects of the native Enter keypress (ex: creating a newline) are undone, the original selection is restored via the bookmark, and {productname}'s own Enter key handler is called. As a result, iOS Safari no longer attempts to compose Korean characters across newlines, resolving the issue.
 
 [[security-fixes]]
 == Security fixes
