DOC-2025: table.adoc
Added include statement pointing to new partial: /configuration/table_merge_content_on_paste.adoc.

--- a/modules/ROOT/pages/table.adoc
+++ b/modules/ROOT/pages/table.adoc
@@ -52,6 +52,8 @@ include::partial$configuration/table_row_advtab.adoc[leveloffset=+1]
 
 include::partial$configuration/table_style_by_css.adoc[leveloffset=+1]
 
+include::partial$configuration/table_merge_content_on_paste.adoc[leveloffset=+1]
+
 NOTE: The advanced tabs of the table, row, and cell properties dialogs use the `+colorpicker+` to allow for border and background colors to be applied. See docs to use and configure a custom xref:user-formatting-options.adoc#text-color-options[colorpicker].
 
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
