--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -49,6 +49,21 @@ This resulted in an inconsistent end-user experience.
 
 For information on the **Merge Tags** plugin, see: xref:mergetags.adoc[Merge Tags].
 
+=== Powerpaste 6.1.5
+
+The {productname} 6.5 release includes an accompanying release of the **Power Paste** premium plugin.
+
+**Power Paste** 6.1.5 includes one fix:
+
+=== Existing tables were not filled out when pasting tables from Word and Excel.
+//#TINY-9500
+
+In previous versions of {productname}, when the PowerPaste plugin was active and a table was copied from Microsoft Word or Excel into a {productname} editor, the copied table would be pasted as a whole table into one cell, rather than merging the content of the copied table into the cells of the existing table.
+
+In {productname} 6.5, this issue has been fixed.
+
+As a result, when a table is copied and pasted into an existing table within {productname} editor, it correctly fills the cells of the existing table.
+
 [[accompanying-premium-plugin-end-of-life-announcement]]
 == Accompanying Premium Plugin end-of-life announcement
 
