--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -108,6 +108,15 @@ In previous versions of {productname}, an issue was identified in the close butt
 
 In {productname} 6.5, the markup was fixed by replacing the div element with a `<span>` element, aligning it with HTML guidelines. As a result, the updated close buttons now pass HTML markup checkers without throwing errors.
 
+=== Pasting content into the editor would not fire an input event.
+//#TINY-9829
+
+In previous versions of {productname}, pasting content into the editor would not fire an input event.
+
+This is contrary to web standards, which states that an input event should be fired when the value of a <textarea> element is changed.
+
+In {productname} 6.5, a `beforeinput` event and an `input` event, both with an “insertFromPaste” inputType property, are now fired in order when content is pasted into  the {productname} <textarea> field. In addition, the `beforeinput` event will also hold a `DataTransfer` object which contains the text/html data being pasted.
+
 [[security-fixes]]
 == Security fixes
 
