--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -76,9 +76,9 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 === Screen readers now announce instructions for resizing the editor using arrow keys, when the resize handle is focused.
 //#TINY-9793
 
-In previous versions of {productname}, when using voice assistant software when focused on the editor's resize handle it would not announce any instructions to the user.
+When using voice assistant software in previous versions of {productname}, focusing on the editor resize handle would not announce any instruction.
 
-In {productname} 6.5, the voice assistant software will now announce instructions  to the user for adjusting the size of the editor, by using directional arrow keys such as `↑` arrow up, `↓` arrow down ,  `→` arrow right,  and  `←` arrow left, when the editor resize handle is focused.
+In version 6.5 instructions for adjusting the size of the editor using arrow keys are announced, when the editor resize handle is focused.
 
 [[additions]]
 == Additions
