--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -73,6 +73,17 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.5 also includes the following improvements:
 
+=== Translations added for Help text displayed at **Help > Help > Keyboard Navigation**.
+//#TINY-9633
+
+In previous versions of {productname}, translations for the text on the “Keyboard Navigation” tab on the Help dialog were not available due to a flaw with the way translations were delivered. Conventionally, translations were parsed into JavaScript files containing objects which were keyed by the English string, with the value being the translated equivalent in a different language. This was unsuitable for very long strings such as the text on the “Keyboard Navigation” tab.
+
+In {productname} 6.5, a new pipeline has been implemented for delivering translations for both long strings and professional translations for text within the “Keyboard Navigation” tab inside the Help dialog.
+
+As a result, the text is now shown in the language specified by the language option.
+
+[NOTE]
+Due to the large differences between this new pipeline and conventional methods of delivering translations, the professional translations for the text on the “Keyboard Navigation” tab have been made **open-source** in the `i18n` subdirectory in the Help plugin for _community users_.
 
 [[additions]]
 == Additions
