--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -78,7 +78,7 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 When using voice assistant software in previous versions of {productname}, focusing on the editor resize handle would not announce any instruction.
 
-In version 6.5 instructions for adjusting the size of the editor using arrow keys are announced, when the editor resize handle is focused.
+In {productname} 6.5, instructions for adjusting the size of the editor using arrow keys are now announced upon focusing the editor resize handle, while using voice assistant software.
 
 [[additions]]
 == Additions
