--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -80,6 +80,8 @@ When using voice assistant software in previous versions of {productname}, focus
 
 In {productname} 6.5, instructions for adjusting the size of the editor using arrow keys are now announced upon focusing the editor resize handle, while using voice assistant software.
 
+NOTE: In {productname} 6.5 Enterprise, this announcement is only available in English. Additional translations will be added in a future release.
+
 [[additions]]
 == Additions
 {productname} 6.5 also includes the following additions:
