DOC-2065: full-featured-premium-demo.adoc
Replaced list of excluded plugins with table of excluded plugins.

Change made for readability’s and parsability’s sake.

--- a/modules/ROOT/pages/full-featured-premium-demo.adoc
+++ b/modules/ROOT/pages/full-featured-premium-demo.adoc
@@ -13,6 +13,15 @@ liveDemo::full-featured[]
 
 The following plugins are excluded from this example:
 
-* xref:moxiemanager.adoc[MoxieManager (Premium Plugin)] — xref:tinydrive-introduction.adoc[*{cloudfilemanager}*] included instead.
-* xref:autoresize.adoc[Autoresize] — Resizes the editor to fit the content.
-* xref:code.adoc[Code] — xref:advcode.adoc[*Advanced Code Editor*] included instead.
+[cols="1,1]
+|===
+|Excluded plugins |Notes
+
+|xref:moxiemanager.adoc[MoxieManager (Premium Plugin)]
+|xref:tinydrive-introduction.adoc[*{cloudfilemanager}*] included instead.
+
+|xref:autoresize.adoc[Autoresize]
+|Resizes the editor to fit the content.
+
+|xref:code.adoc[Code]
+|xref:advcode.adoc[*Advanced Code Editor*] included instead.
