DOC-2065: full-featured-oepn-source-demo.adoc
Replaced list of excluded plugins with table of excluded plugins.

Change made for readability’s and parsability’s sake.

--- a/modules/ROOT/pages/full-featured-open-source-demo.adoc
+++ b/modules/ROOT/pages/full-featured-open-source-demo.adoc
@@ -10,5 +10,12 @@ liveDemo::open-source-plugins[]
 
 The following plugins are excluded from this example:
 
-* link:{plugindirectory}[All premium plugins].
-* xref:autoresize.adoc[Autoresize] — Resizes the editor to fit the content.
+[cols="1,1]
+|===
+|Excluded plugins |Notes
+
+|link:{plugindirectory}[All premium plugins].
+|Use the xref:full-featured-premium-demo[Full featured demo including Premium Plugins]
+
+|xref:autoresize.adoc[Autoresize]
+|Resizes the editor to fit the content.
