--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -108,6 +108,16 @@ In previous versions of {productname}, an issue was identified in the close butt
 
 In {productname} 6.5, the markup was fixed by replacing the div element with a `<span>` element, aligning it with HTML guidelines. As a result, the updated close buttons now pass HTML markup checkers without throwing errors.
 
+=== Saving the Table Properties dialog after changing properties unrelated to cells would overwrite cell properties set by the Cell Properties dialog.
+//#TINY-9837
+
+In previous versions of {productname}, when the user modified a field within the Table Properties dialog, upon saving, the modified change set in the Cell Properties dialog would be replaced by the corresponding properties from the Table Properties dialog, even if the latter properties were not actually changed.
+
+For example, if the user adjusted the border `width` and border `color` of a cell using the Cell Properties dialog, then made a modification in the Table Properties dialog unrelated to those properties, such as alignment, the modified border `width` and `color` of the cell would unexpectedly revert to the modified values from the Table Properties dialog upon saving.
+
+In {productname} 6.5, the Table Properties dialog will continue to be the "source-of-truth" and have the ability to overwrite cell and row properties like border width and color. However, the Table Properties dialog will only overwrite those properties if they were modified in the dialog.
+
+
 [[security-fixes]]
 == Security fixes
 
