--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -129,12 +129,8 @@ This section describes issues that users of {productname} 6.5 may encounter and 
 
 There are several known issues in {productname} 6.5.
 
-=== Screen readers are currently only supported in English ('en') when announcing instructions for resizing the editor.
-//#TINY-9793
+=== Untranslated instructions for editor resize handle when using screen readers
 
+In {productname} 6.5, instructions for using the editor resize handle were introduced, however these instructions are only provided in English.
 
-In {productname} 6.5, introduced announcing instructions for adjusting the editor's size using arrow keys to support screen readers.
-
-However, there is a known issue where this new instruction is currently only available in English ('en') when resizing the editor. 
-
-NOTE: that future releases of {productname} will include additional translations to provide broader support.
+Translations for these instructions will be added in a future enterprise release.
