DOC-2067: Updated nav.adoc with xref link to Accordion plugin

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -400,6 +400,7 @@
 ** xref:release-notes.adoc[Release notes for TinyMCE 6]
 *** TinyMCE 6.5
 **** xref:6.5-release-notes.adoc#overview[Overview]
+**** xref:6.5-release-notes.adoc#new-open-source-plugin[New Open Source Plugin]
 **** xref:6.5-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
 **** xref:6.5-release-notes.adoc#accompanying-premium-plugin-end-of-life-announcement[Accompanying Premium Plugin end-of-life announcement]
 **** xref:6.5-release-notes.adoc#accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
