DOC-2069: setup infrastructure for adding basic working examples pages to docs
1. Added `examples.adoc` as index page for working examples going forward.
2. Added `example-template-creation.adoc` as first working example page.
3. Added `template-creation` directory, and two empty files within — index.html and index.js — to `live-demos` in preperation for creating actual working template creation example.
4. Edited `nav.adoc` to support the above.
5. Added changelog entry for this ticket.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -214,10 +214,10 @@
 ** xref:migration-from-froala.adoc[Migrating from Froala]
 ** xref:generate-rsa-key-pairs.adoc[Generate public key pairs]
 * Examples
-** xref:basic-example.adoc[Basic example]
-** Full-Featured demos
-*** xref:full-featured-premium-demo.adoc[Including premium features]
-*** xref:full-featured-open-source-demo.adoc[Excluding premium features]
+** xref:examples.adoc[TinyMCE Examples]
+*** xref:basic-example.adoc[Basic example]
+*** xref:full-featured-open-source-demo.adoc[Full-featured demo including Open Source features]
+*** xref:full-featured-premium-demo.adoc[Full-featured demo Including Open Source and Premium features]
 ** Tiny Skins and Icon Packs
 *** xref:bootstrap-demo.adoc[Bootstrap Demo]
 *** xref:borderless-demo.adoc[Borderless Demo]
