--- a/modules/ROOT/pages/examples.adoc
+++ b/modules/ROOT/pages/examples.adoc
@@ -2,74 +2,12 @@
 :description: {productname} {productmajorversion} Examples
 :keywords: examples, demos, working ideas,
 
-This table sets out the {productname} general working examples included in the {productname} documentation.
+[[general-examples]]
+== General examples
 
-[cols="1,1"]
-|===
+include::partial$index-pages/general-examples.adoc[]
 
-a|
-[.lead]
-xref:basic-example.adoc[Basic example]
+[[use-case-specific-working-examples]]
+== Use-case specific working examples
 
-Basic working editor example.
-
-a|
-[.lead]
-xref:full-featured-open-source-demo.adoc[Full-featured demo including Open Source features]
-
-Fully-featured editor example including all Open Source plugins.
-
-a|
-[.lead]
-xref:full-featured-premium-demo.adoc[Full-featured demo Including Open Source and Premium features]
-
-Fully-featured editor example, including all Open Source plugins and almost all Premium plugins.
-
-a|
-[.lead]
-xref:classic-demo.adoc[Classic editor mode]
-
-Working {productname} editor in Classic editor mode.
-
-a|
-[.lead]
-xref:inline-demo.adoc[Inline editor]
-
-Working {productname} editor in Inline mode.
-
-a|
-[.lead]
-xref:distraction-free-demo.adoc[Distraction-free editor]
-
-Working {productname} editor in Distraction-free mode.
-
-// Dummy table cell.
-// 1. Remove the inline comment markup pre-pending this
-//    element when the number of cells in the table is
-//    odd.
-// 2. Prepend the inline comment markup to this element
-//    when the number of cells in the table is even.
-//a|
-
-|===
-
-This table sets out {productname} use-case–specific basic working examples included in the {productname} documentation.
-
-[cols="1,1"]
-|===
-
-a|
-[.lead]
-xref:example-template-creation.adoc[Template creation]
-
-Using {productname} to create re-usable and partially-editable templates.
-
-// Dummy table cell.
-// 1. Remove the inline comment markup pre-pending this
-//    element when the number of cells in the table is
-//    odd.
-// 2. Prepend the inline comment markup to this element
-//    when the number of cells in the table is even.
-a|
-
-|===
+include::partial$index-pages/use-case-specific-working-examples.adoc[]
