DOC-2069: nav.adoc
Further re-organisation of Examples section of `nav.adoc`.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -213,11 +213,13 @@
 ** xref:migration-from-5x.adoc[Migrating from TinyMCE 5]
 ** xref:migration-from-froala.adoc[Migrating from Froala]
 ** xref:generate-rsa-key-pairs.adoc[Generate public key pairs]
-* Examples
-** xref:examples.adoc[TinyMCE Examples]
+* xref:examples.adoc[Examples]
+** xref:examples.adoc#general-examples[General examples]
 *** xref:basic-example.adoc[Basic example]
 *** xref:full-featured-open-source-demo.adoc[Full-featured demo including Open Source features]
 *** xref:full-featured-premium-demo.adoc[Full-featured demo Including Open Source and Premium features]
+** xref:examples.adoc#use-case-specific-working-examples[Use case examples]
+*** xref:example-template-creation.adoc[Template creation example]
 ** Tiny Skins and Icon Packs
 *** xref:bootstrap-demo.adoc[Bootstrap Demo]
 *** xref:borderless-demo.adoc[Borderless Demo]
