DOC-2069: use-case-examples.adoc
Re-named partial file from `use-case-specific-working-examples.adoc` to `use-case-examples.adoc`.

Edited files referencing this file-name accordingly.

--- a/modules/ROOT/pages/examples.adoc
+++ b/modules/ROOT/pages/examples.adoc
@@ -7,7 +7,7 @@
 
 include::partial$index-pages/general-examples.adoc[]
 
-[[use-case-specific-working-examples]]
-== Use-case specific working examples
+[[use-case-examples]]
+== Use case examples
 
 include::partial$index-pages/use-case-specific-working-examples.adoc[]
