--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -218,7 +218,7 @@
 *** xref:basic-example.adoc[Basic example]
 *** xref:full-featured-open-source-demo.adoc[Full-featured demo including Open Source features]
 *** xref:full-featured-premium-demo.adoc[Full-featured demo Including Open Source and Premium features]
-** xref:examples.adoc#use-case-specific-working-examples[Use case examples]
+** xref:examples.adoc#use-case-examples[Use case examples]
 *** xref:example-template-creation.adoc[Template creation example]
 ** Tiny Skins and Icon Packs
 *** xref:bootstrap-demo.adoc[Bootstrap Demo]
