DOC-2069: nav.adoc
Further albeit minor re-organising of Examples section.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -218,6 +218,9 @@
 *** xref:basic-example.adoc[Basic example]
 *** xref:full-featured-open-source-demo.adoc[Full-featured demo including Open Source features]
 *** xref:full-featured-premium-demo.adoc[Full-featured demo Including Open Source and Premium features]
+*** xref:classic-demo.adoc[Classic editor mode]
+*** xref:inline-demo.adoc[Inline editor]
+*** xref:distraction-free-demo.adoc[Distraction-free editor]
 ** xref:examples.adoc#use-case-examples[Use case examples]
 *** xref:example-template-creation.adoc[Template creation example]
 ** Tiny Skins and Icon Packs
@@ -232,9 +235,6 @@
 *** xref:outside-demo.adoc[Outside Demo]
 *** xref:small-demo.adoc[Small Icons Demo]
 *** xref:snow-demo.adoc[Snow Demo]
-** xref:classic-demo.adoc[Classic editor mode]
-** xref:inline-demo.adoc[Inline editor]
-** xref:distraction-free-demo.adoc[Distraction-free editor]
 * Initial configuration
 ** xref:editor-important-options.adoc[Integration options]
 ** xref:editor-size-options.adoc[Size]
