DOC-2069: examples.adoc
Copy-edits.

--- a/modules/ROOT/pages/examples.adoc
+++ b/modules/ROOT/pages/examples.adoc
@@ -1,6 +1,6 @@
-= {productname} {productmajorversion} Examples
+= {productname} {productmajorversion} examples
 :description: {productname} {productmajorversion} Examples
-:keywords: examples, demos, working ideas,
+:keywords: examples, demos, working samples, use-cases
 
 [[general-examples]]
 == General examples
