--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -356,6 +356,7 @@
 ***** xref:tinydrive-type-interfaces.adoc[TypeScript interfaces]
 **** xref:tinydrive-changelog.adoc[Changelog]
 ** Open source plugins
+*** xref:accordion.adoc[Accordion]
 *** xref:advlist.adoc[Advanced List]
 *** xref:anchor.adoc[Anchor]
 *** xref:autolink.adoc[Autolink]
