--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -4,7 +4,7 @@
 
 NOTE: This is the {productname} Community version changelog. For information about the latest {cloudname} or {enterpriseversion} Release, see: xref:release-notes.adoc[{productname} Release Notes].
 
-== 6.5 - 2023-06-06
+== 6.5 - 2023-06-08
 
 === Added
 * Support for the `h` hash parameter in Vimeo video URLs in the Media plugin.
@@ -33,11 +33,13 @@ NOTE: This is the {productname} Community version changelog. For information abo
 * If the selection contains more than one table cell, Quickbar toolbars are now positioned in the middle of the selection horizontally.
 * Exposed `dataTransfer` property of drag and drop events for elements with a `contenteditable="false"` attribute.
 * Screen readers now announce instructions for resizing the editor using arrow keys, when the resize handle is focused.
+* Dialog `tabpanel` tab labels are now allowed to word wrap for better readability with long labels.
 
 === Changed
 * The `caption`, `address` and `dt` elements no longer incorrectly allow non-inline child elements when the editor schema is set to _HTML 4_.
 * SVG icons for back and foreground colors now use `class` instead of `id` to identify SVG elements that should change color.
 * Anchor tag elements — `<a>` — no longer incorrectly allow non-inline child elements when the editor schema is set to _HTML 4_.
+* Help dialog was restored to `medium` width for better readability.
 
 === Fixed
 * Right-clicking on a merge tag instance presented different highlighting depending on the host browser.
