--- a/modules/ROOT/pages/accordion.adoc
+++ b/modules/ROOT/pages/accordion.adoc
@@ -32,17 +32,11 @@ tinymce.init({
 });
 ----
 
-////
-
-Delete everything not require/relevant from this point on.
-
 == Options
 
-The following configuration options affect the behavior of the {pluginname} plugin.
+include::partial$configuration/details_initial_state.adoc[][leveloffset=+1]
 
-There should be a template to help you create these configuration option/settings "chunks".
-Just include as per the below example.
-include::partial$configuration/<setting-name-in-hyphen-case>.adoc[]
+////
 
 Toolbar buttons content, uses the pluginname and plugincode variables.
 The toolbar buttons are the same as another plugin, assign the other plugin's identifier to `altplugincode`
