--- a/modules/ROOT/partials/events/accordion-events.adoc
+++ b/modules/ROOT/partials/events/accordion-events.adoc
@@ -3,6 +3,6 @@ The following events are provided by the xref:accordion.adoc[Accordion plugin].
 [cols="1,1,2",options="header"]
 |===
 |Name |Data |Description
-|ToggledAccordion |Fired when an accordion is toggled. Passes the actual state (`+true+` or `~+false+`) and the element.
-|ToggledAllAccordion |Fired when all accordions are toggled. Passes the actual state (`+true+` or `~+false+`, or undefined) and all the affected elements.
+|ToggledAccordion |Passes the state — `+true+` or `~+false+` — and the element. |Fired when an accordion is toggled.
+|ToggledAllAccordion |Passes the state — `+true+`, `~+false+`, or undefined — and all the affected elements. |Fired when all accordions are toggled.
 |===
