--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -108,7 +108,7 @@ In previous versions of {productname}, an issue was identified in the close butt
 
 In {productname} 6.5, the markup was fixed by replacing the div element with a `<span>` element, aligning it with HTML guidelines. As a result, the updated close buttons now pass HTML markup checkers without throwing errors.
 
-=== Pasting content into the editor would not fire an input event.
+=== Pasting content into the editor did not fire `beforeinput` and `input` events.
 //#TINY-9829
 
 In previous versions of {productname}, pasting content into the editor would not fire an `input` event.
