DOC-2024: accordion.adoc
Added include statement pointing to `/partial/configuration/details_serialized_state.adoc`.

--- a/modules/ROOT/pages/accordion.adoc
+++ b/modules/ROOT/pages/accordion.adoc
@@ -36,6 +36,8 @@ tinymce.init({
 
 include::partial$configuration/details_initial_state.adoc[][leveloffset=+1]
 
+include::partial$configuration/details_serialized_state.adoc[][leveloffset=+1]
+
 ////
 
 Toolbar buttons content, uses the pluginname and plugincode variables.
