--- a/modules/ROOT/partials/plugin-apis/accordion-apis.adoc
+++ b/modules/ROOT/partials/plugin-apis/accordion-apis.adoc
@@ -1,46 +1,24 @@
 [cols="1,1,4",options="header"]
 |===
 |Name |Arguments |Description
-|InsertAccordion |none
-|ToggleAccordion |`+true+` `+false+` optional `+state?+` |Toggles an accordion’s state. Uses the optional 
-|ToggleAllAccordions
-|RemoveAccordion
-
-
-
-
-
-
-
-
-
-
-
-////
-|addIgnoredWords |words: `+string[]+`, lang?: `+string+` |Add an array of words to the `+spellchecker_ignore_list+` for a specific language. Add the array of words to all languages by omitting the `+lang+` parameter.
-|getLanguage |N/A |Get the current language enabled for spellchecking.
-|setLanguage |language: `+string+` |Set the current language for spellchecking. This must be a supported language code (case-sensitive). For a list of supported languages, see: xref:introduction-to-tiny-spellchecker.adoc#supported-languages[Spell Checker Pro - `+Supported languages+`].
-3+| 
-include::partial$misc/admon-requires-6.5v.adoc[]
-|getSpellingErrors |N/A |Returns an array of objects representing each existing misspelled word in the editor content, with each object using the keys `language` and `word`. 
+|<api1> |<arguments1> |<What api1 does>
+|<api2> |<arguments2> |<What api2 does>
+|<api3> |<arguments3> |<What api3 does>
+|<api4> |<arguments3> |<What api3 does>
 |===
+
 
 .Examples
 [source,js]
 ----
-// ignore words for all languages
-tinymce.activeEditor.plugins.tinymcespellchecker.addIgnoredWords(['tinymce']);
+// what this example does
+tinymce.activeEditor.plugins.accordion.<api1>(<arguments1>);
 
-// ignore words for a specific language
-tinymce.activeEditor.plugins.tinymcespellchecker.addIgnoredWords(['TinyMCE', 'tinymce'], 'en_us');
+// what this example does
+tinymce.activeEditor.plugins.accordion.<api2>(<arguments2>);
 
-// get the current language used for spellchecking
-tinymce.activeEditor.plugins.tinymcespellchecker.getLanguage();
-
-// set the current language to a specific language
-tinymce.activeEditor.plugins.tinymcespellchecker.setLanguage('sv');  // e.g. Swedish
-
-// retrieve all the misspelled words in the editor
-tinymce.activeEditor.plugins.tinymcespellchecker.getSpellingErrors();
+// what this example does
+tinymce.activeEditor.plugins.accordion.<api3>(<arguments3>);
+// what this example does
+tinymce.activeEditor.plugins.accordion.<api4>(<arguments4>);
 ----
-////
