--- a/modules/ROOT/partials/configuration/details_serialized_state.adoc
+++ b/modules/ROOT/partials/configuration/details_serialized_state.adoc
@@ -33,6 +33,7 @@ tinymce.init({
 ----
 tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
+  plugins: 'preview', // added to this example for UX demonstration purposes; see the NOTE below
   newdocument_content: '<details><summary>Accordion summary...</summary><p>Accordion body...</p></details>',
   details_initial_state: 'expanded',
   details_serialized_state: 'collapsed',
@@ -47,4 +48,10 @@ The option does not require the xref:accordion.adoc[Accordion] plugin be loaded 
 In the above example, when *File → New document* is selected, the xref:content-behavior-options#newdocument_content[`newdocument_content`] option puts a `<details>` element into the new editor instance.
 
 The `details_initial_state` option causes that element to present as open while the `details_serialized_state` sets the saved content state to closed.
+
+This example also demonstrates a potential UX issue with, in effect, setting `details_initial_state` and `details_serialied_state` at odds. Choosing *File → New document* results in a new editor instance containing an Accordion element presented open, as set by `details_initial_state`.
+
+Choosing *File → Preview* shows this same newly-created document with a _closed_ Accordion element, as set by `details_serialized_state`.
+
+The difference is expected, given the option values. It may, nonetheless, be experienced as a UX inconsistency for some end-users.
 ====
